# Jetson_nano_face_recognition

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  info.txt  main  rec_svm.cpp  res.py  temp.prototxt
faces/: README.md  generate_input_data.py  generate_training_data.py  info.txt  labels.txt  test.py
faces/bbt/: generate_test_data.py
pictures/fps/: resize.py
src/: README.md  alignment.cpp  alignment.h  baseEngine.cpp  baseEngine.h  demo.cpp  face_classifier.cpp  face_classifier.h  face_embedder.cpp  face_embedder.h  includes  kernels.cu  kernels.h  mtcnn.cpp  mtcnn.h  network.cpp  network.h  onet_rt.cpp  onet_rt.h  pBox.h  pnet_rt.cpp  pnet_rt.h  recognize.cpp  recognize.h  rnet_rt.cpp  rnet_rt.h  test.cpp  test.h
src/models/: model.txt
src/rec/: recognize.cpp  recognize.h
